--- a/css & html/3.html
+++ b/css & html/3.html
@@ -17,6 +17,7 @@
 <div>           
 <p><b><font size="5"> 1. Mena Massoud, Naomi Scott - A Whole New World</font></b></p>
     <p><img src="C:\Users\Syahla\Documents\SEMESTER 1\WED DESIGN\final 7\Aladdin2019soundtrack.jpg" width="300px" height="300px"/></p>
+ <audio src="C:\Users\Syahla\Music\Mena Massoud, Naomi Scott - A Whole New World (from Aladdin) (Official Video).mp3"controls play muted></audio>
 
 				
 <p><b> <font size="5">2.Naomi Scott - Speechless (Full)</font></b></p>
