--- a/css & html/4.html
+++ b/css & html/4.html
@@ -7,29 +7,20 @@
 <body>
 	<div id="wrap">
 		<div id="header">			
-			<center><h1> <font size="9">Mountain</font></h1></center>
+			<center><h1> <font size="9">REVIEW</font></h1></center>
 			
 		</div>
 		<div id="menu">
             <ul>
 				<li><a href="1.html">Return to menu</a></li></ul></div>
 <div>
-<p><b><font size="5">1. Gunung Everest </font></b></p>
-    <p><img src="Everest.jpg" width="300px" height="300px"> </p>
-<font size="3"> Mount Everest yang memiliki ketinggian 8.850 mdpl inilah yang dinobatkan sebagai yang paling tinggi di dunia. Gunung ini ditaklukkan pertama kali oleh dua pendaki legendaris Tenzing Norgay dan Edmund Hillary.
-Siapa yang lebih dahulu menginjakkan kaki di puncaknya hanya mereka dan Tuhan lah yang tahu karena mereka sepakat untuk ingin dikenang sebagai dua orang pertama yang mencapai puncak Everest. Keberhasilan keduanya mencapai puncak Everest kemudian menjadi inspirasi para pendaki dari segala penjuru dunia untuk mengikuti jejak mereka.
-Untuk mencapai puncaknya ada 2 jalur yang bisa ditempuh. Pertama Sout East Ridge yang jalur pendakiaanya dimulai dari Nepal dan yang kedua adalah Col-Norh East Ridge yang jalur pendakiaanya dimulai di sisi utara Everest.</font> 
-
-<p><b> <font size="5">2.Gunung Elbrus</font></b></p>
-    <p><img src="Elbrus.jpg" width="300px" height="300px"> </p>
-<font size="3"> Gunung yang masuk ke dalam kawasan pegunungan Caucasus ini memiliki puncak yang menurut banyak orang sebagai yang tertinggi di benua Eropa dengan tinggi mencapai 5.642 mdpl. Caucasus merupakan salah satu daerah di antara Eropa Timur dan Asia Barat, antara Laut Kaspia dan Laut. Karena letaknya yang sebagian masuk ke dalam Asia beberapa menganggapnya sebagai bagian dari Asia Tengah.
-Karena masuk ke dalam daftar puncak tertinggi di dunia maka gunung ini menjadi salah satu tujan utama para pendaki dari segala penjuru dunia untuk ditaklukkan puncaknya. Perjalanan yang tidak mudah sudah pasti akan mereka hadapi, terlebih para pendaki yang berasal dari negara yang memiliki iklim berbeda, seperti Indonesia.
-Salju tebal yang menyelimuti sebagian besar wilayah gunung tidak hanya sangat dingin, tapi juga membuat pendakian semakin berat karena berjalan di atas salju tebal tentu lebih berat di banding berjalan di atas permukaan tanah atau pasir. Persiapan yang matang dan tubuh yang prima adalah syarat mutlak untuk menaklukkan puncak Mount Elbrus.</font>
-
-<p><b><font size="5"> 3. Gunung Kilimanjaro</font></b></p>
-    <p><img src="kili.jpg" width="300px" height="300px"></p>
-<font size="3">  Gunung tertinggi di benua Afrika yang berlokasi di timur laut, Tanzania ini memiliki puncak tertinggi bernama Uhuru Peak yang tingginya mencapai 5.895 meter. Sebagai salah satu yang tertinggi di dunia sudah pasti banyak pendaki dari seluruh dunia datang dan berusaha mendaki untuk menaklukkan puncaknya.
-Kilimanjaro terdiri dari 3 kerucut gunung berapi yang tidak aktif lagi dengan Kibo sebagai kerucut tertinggi. Di Kibo inilah Uhuru Peak berada. Untuk bisa mencapai puncaknya dibutuhkan waktu kurang lebih 4 sampai 5 hari.</font>
+    <p><img src="aladin.jpg" width="800px" height="300px"> </p>
+<font size="3"> It must be appreciated, the 1992 version of Aladdin was one of the Disney films that was loved. The proof, no one can forget the figure of Princess Jasmine, Aladdin, Genie, and the song "A Whole New World" until now. Guy Ritchie must do business with caution, challenge, struggle, make, remake live action from the pop culture product. Without intending to exaggerate, Aladdin's film became one of Disney's best live actions, after Beauty and the Beast (2017). The film offers a festive performance: fantasy adventures in musical drama and crisp jokes.
+In a way, the Aladdin movie wasn't too heavily promoted as heavily as the Marvel films, even though it was a Mickey house. In fact, not many have big expectations about this film. Luckily, this Ritchie film didn't disappoint.Richie not only made the audience feel nostalgic for the 1992 version of the film, but also realized that this was Aladdin's new, modern and worthy of appreciation.</font>
+<p>
+<font size="3">Unfortunately, the stereotypical portrayal of Arabic culture, one of which is the song "Arabian Nights", provides a bad connotation. Although it feels fresh, towards the end of the story feels like a formula and a little anticlimax. Yes, that was one of the effects when Ritchie retained the original material.In contrast to the animated film, Ritchie chose to raise community conflict rather than portrayal of a tribe or race.While maintaining original, modern material, Ritchie is capable of choosing his stars. Mena Massoud fittingly portrayed Aladdin, who might have paved the way for Hollywood.
+    </p>
+Jasmine's daughter, played by Naomi Scott, is a much bigger part of the story. As we know, Princess Jasmine is known as Disney's most feminist princess, because she refused to be married to just any prince. This is the foundation of his character which is made more relevant to the modern era.</font>
 			
 		</div>
 		<div id="footer">7></div>
