--- a/css & html/2.html
+++ b/css & html/2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Cast Aladdin</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="2.css">
 </head>
 <body>
 <div id="wrap">
