--- a/css & html/5.html
+++ b/css & html/5.html
@@ -1,28 +1,63 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	<link rel="stylesheet" type="text/css" href="2.css">
+	<title>5</title>
+	<link rel="stylesheet" type="text/css" href="5.css">
 </head>
 <body>
-	<div class="wrap">
-		<div class="header">			
-			<center><h1> <font size="7">4 Diseases that Often Attack on a Mountain</font></h1></center>
-			
-		</div>
-		<div class="menu">
+	<div id="wrap">
+		<div id="header">			
+			<center><h1> <font size="7">OUR RECOMMENDED MOVIE</font></h1></center>
+        </div>
+		<div id="menu">
 			<ul>
-				<li><a href="1.html">Return Menu</a></li>
-				<p><font size="3"> 1. Hypothermia,
-Simply put, hypothermia is an event where body temperature rises continuously unnoticed. This disease can attack when wet conditions in cold and windy areas. First aid is changing wet clothes with dry ones, getting into a sleeping bag, and filling with warm food and drinks.</font> </p>
-<p><font size="3">2. AMS
-Acute Mountain Sickness (AMS) is an altitude disease that often occurs at an altitude of 3,000 - 4,000 masl. Symptoms include headache, nausea, loss of appetite, shortness of breath, to sleep disorders. To overcome this, climbers must remain aware and do light activities. Don't try to climb any higher if this symptom has arisen.</font></p>
-<p><font size="3">3.Frostbite,
-	Frostbite atau radang dingin adalah kondisi di mana jaringan tubuh membeku dan rusak oleh paparan suhu rendah. Peradangan ini biasa terjadi pada tangan, kaki, hidung, dan telinga. Penyakit ini dapat memakan waktu beberapa minggu untuk pulih. Bahkan penderita dapat kehilangan kulit, jari, dan kaki serta cacat jika tak segera ditangani.</font></p>
-<p><font size="3">4.Heat Stroke,
-	Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.
+                <li><a href="1.html">Return Menu</a></li></ul></div>
+            <div id="content">
+                <div class="left">
 
-Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
-<p><font size="3"></p>
+<font color="grey"><h1>1. END GAME</h1>
+<p><font size="3">Avengers: Endgame is a 2019 American superhero film based on the Marvel Comics superhero team the Avengers, produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures. It is the sequel to 2012's The Avengers, 2015's Avengers: Age of Ultron, and 2018's Avengers: Infinity War, and the twenty-second film in the Marvel Cinematic Universe (MCU). It was directed by Anthony and Joe Russo and written by Christopher Markus and Stephen McFeely, and features an ensemble cast including Robert Downey Jr., Chris Evans, Mark Ruffalo, Chris Hemsworth, Scarlett Johansson, Jeremy Renner, Don Cheadle, Paul Rudd, Brie Larson, Karen Gillan, Danai Gurira, Benedict Wong, Jon Favreau, Bradley Cooper, Gwyneth Paltrow, and Josh Brolin. In the film, the surviving members of the Avengers and their allies attempt to reverse the damage caused by Thanos in Infinity War.</font> </p>
+<p><font size="3">The film was announced in October 2014 as Avengers: Infinity War – Part 2, but Marvel later removed this title. The Russo brothers joined as directors in April 2015, with Markus and McFeely signing on to write the script a month later. The film serves as a conclusion to the story of the MCU up to that point, ending the story arcs for several main characters. Filming began in August 2017 at Pinewood Atlanta Studios in Fayette County, Georgia, shooting back-to-back with Infinity War, and ended in January 2018. Additional filming took place in the Metro and Downtown Atlanta areas, New York, Scotland, and England. The story revisits several moments from earlier films, bringing back actors and settings from throughout the franchise as well as music from previous films. The official title was revealed in December 2018. With an estimated budget of $356 million, it is one of the most expensive films ever made.</font></p>
+    <p><font size="3">Avengers: Endgame was widely anticipated, and Disney backed the film with Marvel's largest marketing campaign. It premiered in Los Angeles on April 22, 2019, and was theatrically released in the United States on April 26. The film received praise for its direction, acting, musical score, action sequences, visual effects, and emotional weight, with critics lauding its culmination of the 22-film story. It grossed nearly $2.8 billion worldwide, surpassing Infinity War's entire theatrical run in just eleven days and breaking numerous box office records, including becoming the highest-grossing film of all time.</font></p></font>
+<hr/>
+                
+</div>    
+<div class="right"><img src="C:\Users\User\Documents\Web Design final exam\marvel1.jpg" alt="SKZ" height="250" width="200" style="float: right; margin: 0 4px 4px 8;"/></div>
+
+<div class="left">
+<h1>2.</h1>
+<p><font size="3">4.Heat Stroke,Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
+<p><font size="3">4.Heat Stroke,Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
+<p><font size="3">4.Heat Stroke,Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
+<p><font size="3">4.Heat Stroke,Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
+<p><font size="3">4.Heat Stroke,Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
+<hr/>
+</div>
+<p><img src="C:\Users\User\Documents\Web Design final exam\marvel1.jpg" alt="SKZ" height="270" width="200" align="right"/></p>
+
+<div class="left">
+<h1>3.</h1>
+<p><font size="3">4.Heat Stroke,Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
+<p><font size="3">4.Heat Stroke,Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
+<p><font size="3">4.Heat Stroke,Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
+<p><font size="3">4.Heat Stroke,Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
+<p><font size="3">4.Heat Stroke,Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
+    <hr/>
+</div>
+      <p><img src="C:\Users\User\Documents\Web Design final exam\marvel1.jpg" alt="SKZ" height="270" width="200" align="right"/></p>   
+                
+<div class="left">
+<h1>4.</h1>
+<p><font size="3">4.Heat Stroke,Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
+<p><font size="3">4.Heat Stroke,Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
+<p><font size="3">4.Heat Stroke,Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
+<p><font size="3">4.Heat Stroke,Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
+<p><font size="3">4.Heat Stroke,Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
+    <hr/>
+</div>
+      <p><img src="C:\Users\User\Documents\Web Design final exam\marvel1.jpg" alt="SKZ" height="270" width="200" align="right"/></p>   
+<div id="footer">7</div>
+    </div>
+    </div>
 </body>
 </html>
