--- a/css & html/5.html
+++ b/css & html/5.html
@@ -54,7 +54,7 @@
 
 <h1>2.CRAZY RICH ASIANS</h1>
 
-    <p><font size="3">Crazy Rich Asians is a 2018 American romantic comedy film directed by Jon M. Chu, from a screenplay by Peter Chiarelli and Adele Lim, based on the 2013 novel of the same name by Kevin Kwan. The film stars Constance Wu, Henry Golding, Gemma Chan, Lisa Lu, Awkwafina, Ken Jeong, and Michelle Yeoh. It follows a Chinese-American professor who travels to meet her boyfriend's family and is surprised to discover they are among the richest in Singapore.</font></p>
+    <p><font size="3"><b>Crazy Rich Asians</b> is a 2018 American romantic comedy film directed by Jon M. Chu, from a screenplay by Peter Chiarelli and Adele Lim, based on the 2013 novel of the same name by Kevin Kwan. The film stars Constance Wu, Henry Golding, Gemma Chan, Lisa Lu, Awkwafina, Ken Jeong, and Michelle Yeoh. It follows a Chinese-American professor who travels to meet her boyfriend's family and is surprised to discover they are among the richest in Singapore.</font></p>
 
 <p><font size="3">The film was announced in August 2013 after the rights to the book were purchased. Much of the cast signed on in the spring of 2017, and filming took place from April to June of that year in parts of Malaysia, New York City, and Singapore. It is the first film by a major Hollywood studio to feature a majority cast of Asian descent in a modern setting since The Joy Luck Club in 1993. Despite praise for that, the film did receive some criticism for casting biracial actors over fully ethnically Chinese ones in certain roles. Additional criticisms were directed at the film for failing to have non-Chinese Singaporean ethnic groups notably Malay and Indian actors as characters.</font></p>
 
