--- a/css & html/5.html
+++ b/css & html/5.html
@@ -52,9 +52,9 @@
 
 <div class="left">
 
-<h1>2.CRAZY RICH ASIANS</h1>
+<font color="grey"><h1>2.CRAZY RICH ASIANS</h1>
 
-    <p><font size="3"><b>Crazy Rich Asians</b> is a 2018 American romantic comedy film directed by Jon M. Chu, from a screenplay by Peter Chiarelli and Adele Lim, based on the 2013 novel of the same name by Kevin Kwan. The film stars Constance Wu, Henry Golding, Gemma Chan, Lisa Lu, Awkwafina, Ken Jeong, and Michelle Yeoh. It follows a Chinese-American professor who travels to meet her boyfriend's family and is surprised to discover they are among the richest in Singapore.</font></p>
+<p><font size="3"><b>Crazy Rich Asians</b> is a 2018 American romantic comedy film directed by Jon M. Chu, from a screenplay by Peter Chiarelli and Adele Lim, based on the 2013 novel of the same name by Kevin Kwan. The film stars Constance Wu, Henry Golding, Gemma Chan, Lisa Lu, Awkwafina, Ken Jeong, and Michelle Yeoh. It follows a Chinese-American professor who travels to meet her boyfriend's family and is surprised to discover they are among the richest in Singapore.</font></p>
 
 <p><font size="3">The film was announced in August 2013 after the rights to the book were purchased. Much of the cast signed on in the spring of 2017, and filming took place from April to June of that year in parts of Malaysia, New York City, and Singapore. It is the first film by a major Hollywood studio to feature a majority cast of Asian descent in a modern setting since The Joy Luck Club in 1993. Despite praise for that, the film did receive some criticism for casting biracial actors over fully ethnically Chinese ones in certain roles. Additional criticisms were directed at the film for failing to have non-Chinese Singaporean ethnic groups notably Malay and Indian actors as characters.</font></p>
 
@@ -82,7 +82,7 @@
 
 <p><font size="3">4.Heat Stroke,Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
 
-    <hr/>
+<hr/>
 
 </div>
 
