--- a/css & html/3.html
+++ b/css & html/3.html
@@ -15,23 +15,23 @@
 <div> 
     <p><font size="2"><b>ALADDIN</b> (Original Motion Picture Soundtrack) is a soundtrack for the film of the same name, released by Walt Disney Records in May 2019. The soundtrack features a cover of "A Whole New World" by Zayn Malik and Zhavia Ward, songs from the original film, a new song written by the original film's composer Alan Menken and Pasek & Paul, and a score composed by Menken. The soundtrack was released on May 22, 2019.</font></p>
 <p><b><font size="5"> 1. Mena Massoud, Naomi Scott - A Whole New World</font></b></p>
-    <p><img src="C:\Users\Syahla\Documents\SEMESTER 1\WED DESIGN\final 7\Aladdin2019soundtrack.jpg" width="300px" height="300px"/></p>
- <audio src="C:\Users\Syahla\Music\Mena Massoud, Naomi Scott - A Whole New World (from Aladdin) (Official Video).mp3"controls loop></audio>
+    <p><img src="Aladdin2019soundtrack.jpg" width="300px" height="300px"/></p>
+ <audio src="Mena Massoud, Naomi Scott - A Whole New World (from Aladdin) (Official Video).mp3"controls loop></audio>
 				
 <p><b> <font size="5">2.Naomi Scott - Speechless (Full)</font></b></p>
-    <p><img src="C:\Users\Syahla\Documents\SEMESTER 1\WED DESIGN\final 7\Aladdin2019soundtrack.jpg" width="300px" height="300px"/></p>
+    <p><img src="Aladdin2019soundtrack.jpg" width="300px" height="300px"/></p>
 <audio src="C:\Users\Syahla\Music\Naomi Scott - Speechless (from Aladdin) (Official Video).mp3"controls loop></audio>
 
 <p><b><font size="5"> 3.Mena Massoud - One Jump Ahead</font></b></p>
-    <p><img src="C:\Users\Syahla\Documents\SEMESTER 1\WED DESIGN\final 7\Aladdin2019soundtrack.jpg" width="300px" height="300px"/></p>
+    <p><img src="Aladdin2019soundtrack.jpg" width="300px" height="300px"/></p>
 <audio src="C:\Users\Syahla\Music\Mena Massoud - One Jump Ahead (From AladdinAudio Only).mp3"controls loop></audio>
 
 <p><b><font size="5"> 4. Will Smith - Arabian Nights</font></b></p>
-    <p><img src="C:\Users\Syahla\Documents\SEMESTER 1\WED DESIGN\final 7\Aladdin2019soundtrack.jpg" width="300px" height="300px"/></p>
+    <p><img src="Aladdin2019soundtrack.jpg" width="300px" height="300px"/></p>
 <audio src="C:\Users\Syahla\Music\Will Smith - Arabian Nights (2019) (From AladdinAudio Only) - Copy.mp3"controls loop></audio>
    
 <p><b><font size="5"> 5.Will Smith - Prince Ali</font></b></p>
-    <p><img src="C:\Users\Syahla\Documents\SEMESTER 1\WED DESIGN\final 7\Aladdin2019soundtrack.jpg" width="300px" height="300px"/></p>
+    <p><img src="Aladdin2019soundtrack.jpg" width="300px" height="300px"/></p>
 <audio src="C:\Users\Syahla\Music\Will Smith - Prince Ali (From AladdinAudio Only).mp3"controls loop></audio>
        
       </div>
