--- a/css & html/3.html
+++ b/css & html/3.html
@@ -20,19 +20,19 @@
 				
 <p><b> <font size="5">2.Naomi Scott - Speechless (Full)</font></b></p>
     <p><img src="Aladdin2019soundtrack.jpg" width="300px" height="300px"/></p>
-<audio src="C:\Users\Syahla\Music\Naomi Scott - Speechless (from Aladdin) (Official Video).mp3"controls loop></audio>
+<audio src="Naomi Scott - Speechless (from Aladdin) (Official Video).mp3"controls loop></audio>
 
 <p><b><font size="5"> 3.Mena Massoud - One Jump Ahead</font></b></p>
     <p><img src="Aladdin2019soundtrack.jpg" width="300px" height="300px"/></p>
-<audio src="C:\Users\Syahla\Music\Mena Massoud - One Jump Ahead (From AladdinAudio Only).mp3"controls loop></audio>
+<audio src="Mena Massoud - One Jump Ahead (From AladdinAudio Only).mp3"controls loop></audio>
 
 <p><b><font size="5"> 4. Will Smith - Arabian Nights</font></b></p>
     <p><img src="Aladdin2019soundtrack.jpg" width="300px" height="300px"/></p>
-<audio src="C:\Users\Syahla\Music\Will Smith - Arabian Nights (2019) (From AladdinAudio Only) - Copy.mp3"controls loop></audio>
+<audio src="Will Smith - Arabian Nights (2019) (From AladdinAudio Only) - Copy.mp3"controls loop></audio>
    
 <p><b><font size="5"> 5.Will Smith - Prince Ali</font></b></p>
     <p><img src="Aladdin2019soundtrack.jpg" width="300px" height="300px"/></p>
-<audio src="C:\Users\Syahla\Music\Will Smith - Prince Ali (From AladdinAudio Only).mp3"controls loop></audio>
+<audio src="Will Smith - Prince Ali (From AladdinAudio Only).mp3"controls loop></audio>
        
       </div>
         <div id="footer">7</div>
