--- a/css & html/5.html
+++ b/css & html/5.html
@@ -64,7 +64,7 @@
 
 </div>
 
-<p><img src="C:\Users\Syahla\Documents\SEMESTER 1\WED DESIGN\final 7\rec\MV5BMTYxNDMyOTAxN15BMl5BanBnXkFtZTgwMDg1ODYzNTM@._V1_.jpg" alt="SKZ" height="270" width="200" align="right"/></p>
+<p><img src="MV5BMTYxNDMyOTAxN15BMl5BanBnXkFtZTgwMDg1ODYzNTM@._V1_.jpg" alt="SKZ" height="270" width="200" align="right"/></p>
 
 
 
