--- a/css & html/5.html
+++ b/css & html/5.html
@@ -46,7 +46,7 @@
 
 </div>    
 
-<div class="right"><img src="C:\Users\User\Documents\Web Design final exam\marvel1.jpg" alt="SKZ" height="250" width="200" style="float: right; margin: 0 4px 4px 8;"/></div>
+<div class="right"><img src="marvel1.jpg" alt="SKZ" height="250" width="200" style="float: right; margin: 0 4px 4px 8;"/></div>
 
 
 
