--- a/css & html/1.html
+++ b/css & html/1.html
@@ -39,7 +39,7 @@
 	<div class="left">
     
     <ul>
-        <p><img src="C:\Users\User\Documents\Web Design final exam\aladdin22.jpg" alt="SKZ" height="250" width="170"/></p>
+        <p><img src="aladdin22.jpg" alt="SKZ" height="250" width="170"/></p>
         <font color="white">
         <li>Directed by : Guy Ritchie
             <li>Produced by : Dan Lin , Jonathan Eirich
