--- a/css & html/3.html
+++ b/css & html/3.html
@@ -6,36 +6,38 @@
 </head>
 <body>
 	<div id="wrap">
-		<div id="header">			
-            <center><h1> <font size="9">OST &nbsp; ALADDIN</font></h1></center>		
+		<div id="header">				
 		</div>
+    <div>
+       <center><h1> <font color="crimson"; font size="9">OST &nbsp; ALADDIN</font></h1></center>	
+        </div>
         <div id="menu">
 			<ul>
                 <li><a href="1.html">HOMEPAGE</a></li></ul></div>
 <div> 
-    <p><font size="2"><b>ALADDIN</b> (Original Motion Picture Soundtrack) is a soundtrack for the film of the same name, released by Walt Disney Records in May 2019. The soundtrack features a cover of "A Whole New World" by Zayn Malik and Zhavia Ward, songs from the original film, a new song written by the original film's composer Alan Menken and Pasek & Paul, and a score composed by Menken. The soundtrack was released on May 22, 2019.</font></p>
-<p><b><font size="5"> 1. Mena Massoud, Naomi Scott - A Whole New World</font></b></p>
+    <p><font color="lightpink"; font size="2"><b>ALADDIN</b> (Original Motion Picture Soundtrack) is a soundtrack for the film of the same name, released by Walt Disney Records in May 2019. The soundtrack features a cover of "A Whole New World" by Zayn Malik and Zhavia Ward, songs from the original film, a new song written by the original film's composer Alan Menken and Pasek & Paul, and a score composed by Menken. The soundtrack was released on May 22, 2019.</font></p>
+<p><b><font color="lightpink"; font size="5"> 1. Mena Massoud, Naomi Scott - A Whole New World</font></b></p>
     <p><img src="Aladdin2019soundtrack.jpg" width="300px" height="300px"/></p>
  <audio src="Mena Massoud, Naomi Scott - A Whole New World (from Aladdin) (Official Video).mp3"controls loop></audio>
 				
-<p><b> <font size="5">2.Naomi Scott - Speechless (Full)</font></b></p>
+<p><b> <font color="lightpink"; font size="5">2.Naomi Scott - Speechless (Full)</font></b></p>
     <p><img src="Aladdin2019soundtrack.jpg" width="300px" height="300px"/></p>
 <audio src="Naomi Scott - Speechless (from Aladdin) (Official Video).mp3"controls loop></audio>
 
-<p><b><font size="5"> 3.Mena Massoud - One Jump Ahead</font></b></p>
+<p><b><font color="lightpink"; font size="5"> 3.Mena Massoud - One Jump Ahead</font></b></p>
     <p><img src="Aladdin2019soundtrack.jpg" width="300px" height="300px"/></p>
 <audio src="Mena Massoud - One Jump Ahead (From AladdinAudio Only).mp3"controls loop></audio>
 
-<p><b><font size="5"> 4. Will Smith - Arabian Nights</font></b></p>
+<p><b><font color="lightpink"; font size="5"> 4. Will Smith - Arabian Nights</font></b></p>
     <p><img src="Aladdin2019soundtrack.jpg" width="300px" height="300px"/></p>
 <audio src="Will Smith - Arabian Nights (2019) (From AladdinAudio Only) - Copy.mp3"controls loop></audio>
    
-<p><b><font size="5"> 5.Will Smith - Prince Ali</font></b></p>
+<p><b><font color="lightpink"; font size="5"> 5.Will Smith - Prince Ali</font></b></p>
     <p><img src="Aladdin2019soundtrack.jpg" width="300px" height="300px"/></p>
 <audio src="Will Smith - Prince Ali (From AladdinAudio Only).mp3"controls loop></audio>
        
       </div>
-        <div id="footer">7</div>
+        <div id="footer">GROUP 7(SYAHLA ARFIAN)</div>
 		</div>
 </body>
 </html>
