--- a/css & html/5.html
+++ b/css & html/5.html
@@ -68,26 +68,22 @@
 
 
 
+
 <div class="left">
+<h1>3. Frozen 2 (by Anggita Chaerani)</h1>
 
-<h1>3.</h1>
+<p><font size="3">Frozen 2, one of the most beautifully animated films of the decade, filled with stunning visual pyrotechnics and incredible attention to detail. </font></p>
 
-<p><font size="3">4.Heat Stroke,Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
+<p><font size="3">From the Academy Award®-winning team—directors Jennifer Lee and Chris Buck, producer Peter Del Vecho and songwriters Kristen Anderson-Lopez and Robert Lopez—and featuring the voices of Idina Menzel, Kristen Bell, Jonathan Groff and Josh Gad, Walt Disney Animation Studios’ “Frozen 2” opens in U.S. theaters on Nov. 22, 2019. </font></p>
 
-<p><font size="3">4.Heat Stroke,Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
+<p><font size="3"> A little sneak peek: Why was Elsa born with magical powers? The answer is calling her and threatening her kingdom. Together with Anna, Kristoff, Olaf and Sven, she'll set out on a dangerous but remarkable journey. In "Frozen," Elsa feared her powers were too much for the world. In "Frozen 2," she must hope they are enough.  </font></p>
 
-<p><font size="3">4.Heat Stroke,Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
 
-<p><font size="3">4.Heat Stroke,Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
-
-<p><font size="3">4.Heat Stroke,Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
 
 <hr/>
 
 </div>
-
-      <p><img src="C:\Users\User\Documents\Web Design final exam\marvel1.jpg" alt="SKZ" height="270" width="200" align="right"/></p>   
-
+<p><img src="frozenuy.jpg" height="270" width="200" align="right"/></p>   
                 
 
 <div class="left">
