--- a/css & html/3.html
+++ b/css & html/3.html
@@ -13,8 +13,9 @@
         </div>
         <div id="menu">
 			<ul>
-                <li><a href="1.html">HOMEPAGE</a></li></ul></div>
-<div> 
+            <li><a href="1.html"> HOMEPAGE </a></li></ul></div>
+<div id="content">
+    <div class="left">
     <p><font color="lightpink"; font size="2"><b>ALADDIN</b> (Original Motion Picture Soundtrack) is a soundtrack for the film of the same name, released by Walt Disney Records in May 2019. The soundtrack features a cover of "A Whole New World" by Zayn Malik and Zhavia Ward, songs from the original film, a new song written by the original film's composer Alan Menken and Pasek & Paul, and a score composed by Menken. The soundtrack was released on May 22, 2019.</font></p>
 <p><b><font color="lightpink"; font size="5"> 1. Mena Massoud, Naomi Scott - A Whole New World</font></b></p>
     <p><img src="Aladdin2019soundtrack.jpg" width="300px" height="300px"/></p>
@@ -35,8 +36,8 @@
 <p><b><font color="lightpink"; font size="5"> 5.Will Smith - Prince Ali</font></b></p>
     <p><img src="Aladdin2019soundtrack.jpg" width="300px" height="300px"/></p>
 <audio src="Will Smith - Prince Ali (From AladdinAudio Only).mp3"controls loop></audio>
-       
-      </div>
+        </div>
+     </div>
         <div id="footer">GROUP 7(SYAHLA ARFIAN)</div>
 		</div>
 </body>
