--- a/css & html/2.html
+++ b/css & html/2.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<title>Cast Aladdin</title>
-	<link rel="stylesheet" type="text/css" href="2.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <div id="wrap">
-<div id="header">			
-<center><h1> <font size="10">Cast Aladdin</font></h1></center>
+<div id="header">
+<div id="title">Cast Aladdin</div>
 </div>
 <div id="menu">
 <ul> <li><a href="1.html">Homepage</a></li></ul></div>
