--- a/css & html/4.html
+++ b/css & html/4.html
@@ -16,4 +16,7 @@
     <div id="menu">
     <ul>
     <li><a href="1.html">Return to menu</a></li></ul></div>
+    <div>
+    
+<p><font size="3"> It must be appreciated, the 1992 version of Aladdin was one of the Disney films that was loved. The proof, no one can forget the figure of Princess Jasmine, Aladdin, Genie, and the song "A Whole New World" until now. Guy Ritchie must do business with caution, challenge, struggle, make, remake live action from the pop culture product. Without intending to exaggerate, Aladdin's film became one of Disney's best live actions, after Beauty and the Beast (2017). The film offers a festive performance: fantasy adventures in musical drama and crisp jokes.In a way, the Aladdin movie wasn't too heavily promoted as heavily as the Marvel films, even though it was a Mickey house. In fact, not many have big expectations about this film. Luckily, this Ritchie film didn't disappoint.Richie not only made the audience feel nostalgic for the 1992 version of the film, but also realized that this was Aladdin's new, modern and worthy of appreciation.</font></p>
             
