--- a/css & html/5.html
+++ b/css & html/5.html
@@ -100,7 +100,7 @@
 
 <p><font size="3">Having a dream will never be easy. Habibie and Ainun know that. Their love awakens on the journey to realize dreams. The cold German snow, sacrifice, pain, solitude and the temptation of wealth and power when they returned to Indonesia accompanied the journey of two lives into one.</font></p>
 
-<p><font size="3">4.Heat Stroke,Heat stroke is the opposite of hypthermia. The condition of the body experiences a dramatic increase in body temperature in a fast time. Heat strokes usually occur when a person feels extreme heat due to exposure to heat from sunburn outside the body's tolerance limits. The most easily seen symptom is high fever reaching 40 degrees.Facing nature cannot be done haphazardly. Although climbing mountains seems easy, it takes a lot of knowledge to be able to survive at altitude.</font></p>
+<p><font size="3">For Habibie, Ainun is everything. Ainun is the eye to see his life. For Ainun, Habibie is everything, a filler of love in his life. But every story has an end, every dream has a limit.</font></p>
 
     <hr/>
 
