--- a/css & html/5.html
+++ b/css & html/5.html
@@ -106,7 +106,7 @@
 
 </div>
 
-      <p><img src="C:\Users\User\Documents\Web Design final exam\marvel1.jpg" alt="SKZ" height="270" width="200" align="right"/></p>   
+      <p><img src="habibie.jpg" alt="SKZ"  height="270" width="200" align="right"/></p>   
 
 <div id="footer">7</div>
 
