--- a/css & html/5.html
+++ b/css & html/5.html
@@ -74,7 +74,7 @@
 
 <p><font size="3">Frozen 2, one of the most beautifully animated films of the decade, filled with stunning visual pyrotechnics and incredible attention to detail. </font></p>
 
-<p><font size="3">From the Academy Award®-winning team—directors Jennifer Lee and Chris Buck, producer Peter Del Vecho and songwriters Kristen Anderson-Lopez and Robert Lopez—and featuring the voices of Idina Menzel, Kristen Bell, Jonathan Groff and Josh Gad, Walt Disney Animation Studios’ “Frozen 2” opens in U.S. theaters on Nov. 22, 2019. </font></p>
+<p><font size="3">From the Academy Award-winning team—directors Jennifer Lee and Chris Buck, producer Peter Del Vecho and songwriters Kristen Anderson-Lopez and Robert Lopez—and featuring the voices of Idina Menzel, Kristen Bell, Jonathan Groff and Josh Gad, Walt Disney Animation Studios’ “Frozen 2” opens in U.S. theaters on Nov. 22, 2019. </font></p>
 
 <p><font size="3"> A little sneak peek: Why was Elsa born with magical powers? The answer is calling her and threatening her kingdom. Together with Anna, Kristoff, Olaf and Sven, she'll set out on a dangerous but remarkable journey. In "Frozen," Elsa feared her powers were too much for the world. In "Frozen 2," she must hope they are enough.  </font></p>
 
