--- a/css & html/1.html
+++ b/css & html/1.html
@@ -60,7 +60,7 @@
         </div>
         
     </div>
-    <div id="footer"><marquee behavior="scroll"  scrollamount="3" onmouseover="this.stop();" onmouseout="this.start();" direction="left">MODIFIED BY GROUP 7</marquee>
+    <div id="footer"><marquee behavior="scroll"  scrollamount="3" onmouseover="this.stop();" onmouseout="this.start();" direction="left">MODIFIED BY GROUP 7 (YULLI)</marquee>
         </div>
     </div>
 </body>
