--- a/css & html/3.html
+++ b/css & html/3.html
@@ -8,12 +8,12 @@
 	<div id="wrap">
 		<div id="header">				
 		</div>
-    <div>
-       <center><h1> <font color="crimson"; font size="9">OST &nbsp; ALADDIN</font></h1></center>	
-        </div>
         <div id="menu">
 			<ul>
             <li><a href="1.html"> HOMEPAGE </a></li></ul></div>
+        <div id="runningtext">
+<marquee behavior="alternate"onmouseover="this.stop()" onmouseout="this.start()">OST ALADDIN</marquee></div>
+<hr/>
 <div id="content">
     <div class="left">
     <p><font color="lightpink"; font size="2"><b>ALADDIN</b> (Original Motion Picture Soundtrack) is a soundtrack for the film of the same name, released by Walt Disney Records in May 2019. The soundtrack features a cover of "A Whole New World" by Zayn Malik and Zhavia Ward, songs from the original film, a new song written by the original film's composer Alan Menken and Pasek & Paul, and a score composed by Menken. The soundtrack was released on May 22, 2019.</font></p>
