--- a/css & html/5.html
+++ b/css & html/5.html
@@ -68,28 +68,30 @@
 
 
 
-
 <div class="left">
-<font color="coral"><h1>3. Frozen 2 (by Anggita Chaerani)</h1>
+<font color="grey"><h1>3. Frozen 2 (Anggita Chaerani)</h1>
 
 <p><font size="3">Frozen 2, one of the most beautifully animated films of the decade, filled with stunning visual pyrotechnics and incredible attention to detail. </font></p>
 
-<p><font size="3">From the Academy Award-winning team—directors Jennifer Lee and Chris Buck, producer Peter Del Vecho and songwriters Kristen Anderson-Lopez and Robert Lopez—and featuring the voices of Idina Menzel, Kristen Bell, Jonathan Groff and Josh Gad, Walt Disney Animation Studios’ “Frozen 2” opens in U.S. theaters on Nov. 22, 2019. </font></p>
+<p><font size="3">The 58th animated film produced by the studio, it is the sequel to the 2013 film Frozen and features the return of directors Chris Buck and Jennifer Lee, producer Peter Del Vecho, songwriters Kristen Anderson-Lopez and Robert Lopez, and composer Christophe Beck. Frozen II had its world premiere at the Dolby Theatre in Hollywood on November 7, 2019, and was released in the United States by Walt Disney Studios Motion Pictures on November 22, 2019. The film received mostly positive reviews from critics, who praised its animation, visuals, writing, music and vocal performances. It has grossed $919 million worldwide, and had the highest all-time worldwide opening for an animated film, and is the fourteenth highest-grossing animated film of time and the eighth highest-grossing film of 2019.  </font></p>
 
-<p><font size="3"> A little sneak peek: Why was Elsa born with magical powers? The answer is calling her and threatening her kingdom. Together with Anna, Kristoff, Olaf and Sven, she'll set out on a dangerous but remarkable journey. In "Frozen," Elsa feared her powers were too much for the world. In "Frozen 2," she must hope they are enough.  </font></p>
+<p><font size="3"> A little sneak peek: Why was Elsa born with magical powers? The answer is calling her and threatening her kingdom. Together with Anna, Kristoff, Olaf and Sven, she'll set out on a dangerous but remarkable journey. In "Frozen," Elsa feared her powers were too much for the world. In "Frozen 2," she must hope they are enough.Together with Anna, Kristoff, Olaf and Sven, Elsa faces a dangerous but remarkable journey into the unknown—to the enchanted forests and dark seas beyond Arendelle, in search of truths about the past.  </font></p>
 
 
 
 <hr/>
 
 </div>
-<p><img src="frozenuy.jpg" height="270" width="200" align="right"/></p>   
-                
+
+      <p><img src="frozenuy.jpg" height="270" width="200" align="right"/></p>   
+<p><img src="C:\Users\User\Documents\Web Design final exam\marvel1.jpg" alt="SKZ" height="270" width="200" align="right"/></p>   
+
+
 
 
 
 <div class="left">
-<font color="coral"><h1>4. Habibie and Ainun (by Desy Rafika Intan Sembiring)</h1> 
+<font color="grey"><h1>4. Habibie and Ainun (by Desy Rafika Intan Sembiring)</h1> 
 
 
 <p><font size="3">Habibie & Ainun is an Indonesian biopic drama film which was released on December 20, 2012. The film stars Reza Rahardian, Bunga Citra Lestari and Tio Pakusadewo. At its launch, the film was witnessed by the 6th President of the Republic of Indonesia, Susilo Bambang Yudhoyono, accompanied by the Governor of the 16th Special Capital Region of Jakarta, Joko Widodo, and by the film's main character himself, the 3rd President of the Republic of Indonesia, Bacharuddin Jusuf Habibie . The film is based on a memoir written by Habibie about the story of his life with his late wife, Hasri Ainun Habibie, in the book Habibie and Ainun.</font></p>
