--- a/css & html/5.html
+++ b/css & html/5.html
@@ -59,7 +59,7 @@
 <p><font size="3">The film was announced in August 2013 after the rights to the book were purchased. Much of the cast signed on in the spring of 2017, and filming took place from April to June of that year in parts of Malaysia, New York City, and Singapore. It is the first film by a major Hollywood studio to feature a majority cast of Asian descent in a modern setting since The Joy Luck Club in 1993. Despite praise for that, the film did receive some criticism for casting biracial actors over fully ethnically Chinese ones in certain roles. Additional criticisms were directed at the film for failing to have non-Chinese Singaporean ethnic groups notably Malay and Indian actors as characters.</font></p>
 
 <p><font size="3">Crazy Rich Asians premiered on August 7, 2018, at the TCL Chinese Theatre in Los Angeles and was released theatrically in the United States on August 15, 2018, by Warner Bros. Pictures. The film received positive reviews from critics, with praise for its acting, production and costume design. The film grossed over $238 million worldwide, making it the highest grossing romantic comedy in a decade. The film received numerous accolades, including at the 76th Golden Globe Awards earning nominations for Best Motion Picture  Musical or Comedy and Best Actress  Motion Picture Comedy or Musical for Wu. It also received four nominations at the 24th Critics' Choice Awards, winning one for Best Comedy, and a Screen Actors Guild Award for Outstanding Performance by a Cast in a Motion Picture at the 25th Screen Actors Guild Awards. Two sequels, based on the novel's follow-ups China Rich Girlfriend and Rich People Problems, are currently in development. </font></p>
-
+    </font>
 <hr/>
 
 </div>
@@ -68,30 +68,28 @@
 
 
 
+
 <div class="left">
-<font color="grey"><h1>3. Frozen 2 (Anggita Chaerani)</h1>
+<font color="coral"><h1>3. Frozen 2 (by Anggita Chaerani)</h1>
 
 <p><font size="3">Frozen 2, one of the most beautifully animated films of the decade, filled with stunning visual pyrotechnics and incredible attention to detail. </font></p>
 
-<p><font size="3">The 58th animated film produced by the studio, it is the sequel to the 2013 film Frozen and features the return of directors Chris Buck and Jennifer Lee, producer Peter Del Vecho, songwriters Kristen Anderson-Lopez and Robert Lopez, and composer Christophe Beck. Frozen II had its world premiere at the Dolby Theatre in Hollywood on November 7, 2019, and was released in the United States by Walt Disney Studios Motion Pictures on November 22, 2019. The film received mostly positive reviews from critics, who praised its animation, visuals, writing, music and vocal performances. It has grossed $919 million worldwide, and had the highest all-time worldwide opening for an animated film, and is the fourteenth highest-grossing animated film of time and the eighth highest-grossing film of 2019.  </font></p>
+<p><font size="3">From the Academy Award-winning team—directors Jennifer Lee and Chris Buck, producer Peter Del Vecho and songwriters Kristen Anderson-Lopez and Robert Lopez—and featuring the voices of Idina Menzel, Kristen Bell, Jonathan Groff and Josh Gad, Walt Disney Animation Studios’ “Frozen 2” opens in U.S. theaters on Nov. 22, 2019. </font></p>
 
-<p><font size="3"> A little sneak peek: Why was Elsa born with magical powers? The answer is calling her and threatening her kingdom. Together with Anna, Kristoff, Olaf and Sven, she'll set out on a dangerous but remarkable journey. In "Frozen," Elsa feared her powers were too much for the world. In "Frozen 2," she must hope they are enough.Together with Anna, Kristoff, Olaf and Sven, Elsa faces a dangerous but remarkable journey into the unknown—to the enchanted forests and dark seas beyond Arendelle, in search of truths about the past.  </font></p>
-
+<p><font size="3"> A little sneak peek: Why was Elsa born with magical powers? The answer is calling her and threatening her kingdom. Together with Anna, Kristoff, Olaf and Sven, she'll set out on a dangerous but remarkable journey. In "Frozen," Elsa feared her powers were too much for the world. In "Frozen 2," she must hope they are enough.  </font></p>
+    </font>
 
 
 <hr/>
 
 </div>
-
-      <p><img src="frozenuy.jpg" height="270" width="200" align="right"/></p>   
-<p><img src="C:\Users\User\Documents\Web Design final exam\marvel1.jpg" alt="SKZ" height="270" width="200" align="right"/></p>   
-
-
+<p><img src="frozenuy.jpg" height="270" width="200" align="right"/></p>   
+                
 
 
 
 <div class="left">
-<font color="grey"><h1>4. Habibie and Ainun (by Desy Rafika Intan Sembiring)</h1> 
+<font color="coral"><h1>4. Habibie and Ainun (by Desy Rafika Intan Sembiring)</h1> 
 
 
 <p><font size="3">Habibie & Ainun is an Indonesian biopic drama film which was released on December 20, 2012. The film stars Reza Rahardian, Bunga Citra Lestari and Tio Pakusadewo. At its launch, the film was witnessed by the 6th President of the Republic of Indonesia, Susilo Bambang Yudhoyono, accompanied by the Governor of the 16th Special Capital Region of Jakarta, Joko Widodo, and by the film's main character himself, the 3rd President of the Republic of Indonesia, Bacharuddin Jusuf Habibie . The film is based on a memoir written by Habibie about the story of his life with his late wife, Hasri Ainun Habibie, in the book Habibie and Ainun.</font></p>
@@ -103,7 +101,7 @@
 <p><font size="3">Having a dream will never be easy. Habibie and Ainun know that. Their love awakens on the journey to realize dreams. The cold German snow, sacrifice, pain, solitude and the temptation of wealth and power when they returned to Indonesia accompanied the journey of two lives into one.</font></p>
 
 <p><font size="3">For Habibie, Ainun is everything. Ainun is the eye to see his life. For Ainun, Habibie is everything, a filler of love in his life. But every story has an end, every dream has a limit.</font></p>
-
+    </font>
 <hr/>
 
 </div>
